2002-04-16  Paolo Carlini <pcarlini@unitus.it>
 	* testsuite/24_iterators/rel_ops.cc: New test.
	
2002-04-16  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* include/bits/type_traits.h (__normal_iterator): Declare in
	__gnu_cxx.  Adjust use at global namespace.
	* include/bits/stl_iterator.h (__normal_iterator): Move definition
	into __gnu_cxx::. Add more operator overloads.  Tidy existing ones.
	* include/bits/basic_string.h (basic_string): Adjust use of
	__normal_iterator.
	* include/bits/stl_vector.h (_Alloc>): Likewise.
	* src/concept-inst.cc (__gnu_cxx): __normal_iterator<> is now here.
	* src/string-inst.cc (operator==): Instantiate in __gnu_cxx.

2002-04-15  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/4164
	Valgrind fixes.
	* config/io/basic_file_stdio.cc (__basic_file::~__basic_file):
	Call close.
	(__basic_file::close): Call fflush. Correct return if fclose ok. 
	(__basic_file::is_open): Make const.
	Change __c_file_type to __c_file.
	* config/io/basic_file_stdio.h: Change __c_file_type to __c_file.
	(__basic_file::is_open): Make const.	
	* config/io/c_io_stdio.h: Change __c_file_type to __c_file.
	* include/std/std_fstream.h (filebuf::_M_allocate_file): Remove.
	(filebuf::_M_unbuf): Add.
	(filebuf::_M_file): Change to non-pointer.
	(filebuf::_M_allocate_pback_buffer): Remove.
	* include/bits/fstream.tcc (filebuf::_M_allocate_file): Remove.
	(filebuf::_M_allocate_internal_buffer): Use _M_unbuf.
	Change initialization list for _M_file change.
	(filebuf::_M_allocate_pback_buffer): Remove.
	Change _M_file usage to reflect non-pointer data member.
	
	* config/locale/generic/c_locale.cc
	(locale::facet::_S_create_c_locale): Add parameter.
	* config/locale/generic/collate_members.cc: Change
	_M_compare_helper to _M_compare.
	Change _M_transform_helper to _M_transform.
	* config/locale/generic/monetary_members.cc: Changeup data types.
	Add dtors.
	* config/locale/generic/numeric_members.cc: Add dtors.
	* config/locale/generic/time_members.cc: Add dtors.