@@ -33,21 +33,15 @@
 
 #include <bits/c++config.h>
 #include <memory>
-#include <vector>
 
 namespace std
 {
   template class allocator<char>;
   template class allocator<wchar_t>;
 
+#ifdef __USE_MALLOC
   template class __malloc_alloc_template<0>;
-
-#ifndef __USE_MALLOC
+#else
   template class __default_alloc_template<true, 0>;
 #endif
-
-  template
-    void
-    vector<unsigned int>::
-    _M_insert_aux(vector<unsigned int>::iterator, unsigned int const &);
 } // namespace std
